--- a/config.toml
+++ b/config.toml
@@ -2,4 +2,4 @@ baseURL = "http://cacayaya.github.io"
 languageCode = "en-us"
 title = "Yifan Wang's Site"
 theme = "eureka"
-publishDir = "public"
+publishDir = "./docs"
